--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "font-awesome": "^4.7.0",
+    "quill": "^1.3.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
