--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^10.5.0",
+    "firebaseui": "^6.1.0",
     "font-awesome": "^4.7.0",
     "quill": "^1.3.6",
     "vue": "^3.2.13",
