--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "debounce": "^1.2.1",
     "firebase": "^10.5.0",
     "firebaseui": "^6.1.0",
     "font-awesome": "^4.7.0",
     "quill": "^1.3.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuefire": "^3.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
